[package]
name = "backoff-futures"
description = "A retry and backoff mechanism for `std::future::Future`"
version = "0.2.0-alpha.2"

authors = ["Jakub Wieczorek <jakub.adam.wieczorek@gmail.com>"]
keywords = ["backoff", "exponential", "futures"]
license = "MIT"
repository = "https://github.com/jakubadamw/backoff-futures"

edition = "2018"

[dependencies]
backoff = "0.1"
tokio-timer = "0.3.0-alpha.6"

[dev-dependencies]
futures-preview = "0.3.0-alpha.19"
isahc = "0.7"
matches = "0.1"
